@@ -5,9 +5,7 @@ import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
 import org.springframework.web.cors.CorsConfiguration;
-
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
@@ -19,12 +17,19 @@ public class CorsConfig {
 
                 CorsConfiguration config = new CorsConfiguration();
 
+                // IMPORTANTE: si usas cookies o Authorization con credentials
                 config.setAllowCredentials(true);
 
                 String origins = System.getenv().getOrDefault(
                                 "CORS_ALLOWED_ORIGINS",
-                                "http://localhost:5173");
-                config.setAllowedOrigins(Arrays.asList(origins.split(",")));
+                                "*");
+
+                // Permite múltiples origins desde env o wildcard
+                if ("*".equals(origins)) {
+                        config.setAllowedOriginPatterns(List.of("*"));
+                } else {
+                        config.setAllowedOrigins(Arrays.asList(origins.split(",")));
+                }
 
                 config.setAllowedMethods(List.of(
                                 "GET",
@@ -36,7 +41,6 @@ public class CorsConfig {
                 config.setAllowedHeaders(List.of("*"));
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-
                 source.registerCorsConfiguration("/**", config);
 
                 return new CorsWebFilter(source);
